--- a/StuDept/appsettings.json
+++ b/StuDept/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-StuDept-DC806EFD-83AC-4745-A3BA-0318E3A8286D;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LUX;Database=StuDept;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
